# flash-mHC

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PUBLISHING.md  TUNING_SM120.md
scripts/: benchmark_kernels.py  gridsearch.py
src/flash_mhc/: __init__.py  block.py  kernels.py  ops.py
tests/: test_correctness.py
